ui/controls/inspector-footer.reel/inspector-footer.css
.ScrollviewFooterWrapper .InspectorFooter {
    background: rgba(0,0,0,.15);
    margin-right: 0;
    box-shadow: 0 -2px 6px rgba(0,0,0,.3);
}

.InspectorFooter {
    margin-top: 1em;
    padding: 1em;
    display: none;
    flex-shrink: 0;
    justify-content: flex-start;
    margin: 0 -.5em;
}

.InspectorFooter > * {
    flex: .00001;
}
/* $fix - important classes can be removed after updating blue-shark */

.InspectorFooter > .blueShark-Button {
    visibility: hidden;
    opacity: 0;
    min-width: 0;
    padding: 0;
    margin-left:  0 !important;
    margin-right: 0 !important;
    overflow: hidden;
    transition: all .5s ease-in-out;
}
.InspectorFooter-delete.blueShark-Button {
    color: rgb(200, 70, 70);
    background: rgba(150, 36, 36,.1);
    border: 1px solid rgb(150, 36, 36);
    box-shadow: none;
    max-width: 8em;
}

.InspectorFooter-delete.blueShark-Button:hover {
    color: #FFF;
    background: rgb(150, 36, 36);
    box-shadow: none;
}


/* States ---------------------------------- */

.InspectorFooter.is-visible { display: flex; }

.InspectorFooter-delete.is-visible,
.InspectorFooter-revert.is-visible,
.InspectorFooter-save.is-visible {
    flex: 1;
    visibility: visible;
    opacity: 1;
    margin-left: .5em !important;
    margin-right: .5em !important;
}

